@@ -17,4 +17,6 @@ void count_eloc(const goto_functionst &goto_functions);
 
 void list_eloc(const goto_functionst &goto_functions);
 
+void print_path_lengths(const goto_functionst &goto_functions);
+
 #endif // CPROVER_GOTO_INSTRUMENT_COUNT_ELOC_H
