@@ -2,6 +2,7 @@
 ===
 
 * GOTO-INSTRUMENT: New option --list-calls-args
+* GOTO-INSTRUMENT: New option --print-path-lenghts
 
 
 5.7
